--- a/image.html
+++ b/image.html
@@ -2,6 +2,8 @@
 	<head><title>Image page</title></head>
         <h1>Image Example...</h1>
 	<body>
+		<a href="project.html">Projects</a>
+		<a href="index.html">Home</a>
 		<img src="photo.jpg">
 	</body>
 </html>
