--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	</head>
 	<h1>This is my Home Page</h1>
 	<body>
-		<a href="project.html">Projects</a>
+		<a href="project.html">Projects</a>&nbsp&nbsp
+		<a href="image.html">Image</html>
 		<p>This is balakrishna,Asst.Prof,CS&AI.
 		cxscjvksvcksnbj,sbcm,sbn,c
 		kvbcvmnsvcsjvcs
