--- a/project.html
+++ b/project.html
@@ -4,7 +4,9 @@
 	</head>
 	<h1>This is my Project Page</h1>
 	<body>
-		<a href="idex.html">Home</a>
+		<a href="index.html">Home</a>
+		<br>
+		<a href="image.html">Image</a>
 		<form>
 			<label>Name:</label>
 			<input type="text">
