--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<h1>This is my Home Page</h1>
 	<body>
 		<a href="project.html">Projects</a>&nbsp&nbsp
-		<a href="image.html">Image</html>
+		<a href="image.html">Image</a>
 		<p>This is balakrishna,Asst.Prof,CS&AI.
 		cxscjvksvcksnbj,sbcm,sbn,c
 		kvbcvmnsvcsjvcs
